# pot-moisture

./: .gitignore  README.md
.github/workflows/: build-publish.yaml
firmware/src/: main.cpp
hardware/: lid.stl  main.stl  sensor_cover.stl
ingress/: Cargo.toml
ingress/docker/: Dockerfile
ingress/src/: main.rs
