[package]
name = "ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5" }
reqwest = { version = "0.11", features = ["json"] }
eyre = { version = "0.6" }
telegraf = "*"
clap = { version = "3.1.18", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = "debuginfo"
